--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  dio: '>= 1.0.13'
+  dio: ^1.0.13
 
 dev_dependencies:
   flutter_test:
