--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: ^1.0.13
   intl: ^0.15.7
   flutter_html: ^0.9.4
+  cached_network_image: ^0.6.0+1
 
 dev_dependencies:
   flutter_test:
