--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.15.7
   flutter_html: ^0.9.4
   cached_network_image: ^0.6.0+1
+  webview_flutter: ^0.3.3+1
 
 dev_dependencies:
   flutter_test:
