--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dependencies:
   dio: ^1.0.13
   intl: ^0.15.7
   flutter_html: ^0.9.4
-  cached_network_image: ^0.6.0+1
+  cached_network_image: ^1.1.1
   webview_flutter: ^0.3.3+1
   shared_preferences: ^0.5.1+1
 
